<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	     >
	 
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:orientation="vertical" >
	 
	        <Button
		        android:id="@+id/btnAlterarData"
		        android:paddingTop="10sp"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content" />
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/hintLitros" />
	 
	        <EditText
	            android:id="@+id/edtRegistroAlterarLitros"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:digits="1234567890"
        		android:inputType="numberDecimal" />
	 
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/hintValor" />
	 
	        <EditText
	            android:id="@+id/edtRegistroAlterarValor"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:digits="1234567890"
        		android:inputType="numberDecimal" />
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/hintKilometragem" />
	 
	        <EditText
	            android:id="@+id/edtRegistroAlterarKilometragem"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:digits="1234567890"
        		android:inputType="numberDecimal" />
	        
	    </LinearLayout>
	 
	    <Button
	        android:id="@+id/btConfirmaAlterarRegistro"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        style="@style/buttonText"
		    android:background="@drawable/bt_verde"
	        android:text="@string/confirmar" />
	 
	</RelativeLayout>


