<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >   
 
    <EditText
        android:id="@+id/litros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:hint="@string/hintLitros"
        android:digits="1234567890"
        android:inputType="numberDecimal"
        android:gravity="fill_horizontal"
        android:scrollHorizontally="true"
        />
     
    <EditText
        android:id="@+id/valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:hint="@string/hintValor"
        android:digits="1234567890"
        android:inputType="numberDecimal"
        android:gravity="fill_horizontal"
        android:scrollHorizontally="true"
        />
    
    <EditText
        android:id="@+id/kilometragem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:hint="@string/hintKilometragem"
        android:digits="1234567890"
        android:inputType="numberDecimal"
        android:gravity="fill_horizontal"
        android:scrollHorizontally="true"
        />
 
</LinearLayout>
